--- a/index.html
+++ b/index.html
@@ -6,20 +6,34 @@
   <title>hehe Studio</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   
-  <header>
-    <h1>hehe Studio</h1>
-    <nav id="myMenu" style="display:none;">
-      <span class="close-btn" onclick="closeNav()">&times;</span>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Contact</a>
-    </nav>
-    <button onclick="openNav()" class="menu-button"><i class="fa-sharp fa-solid fa-bars"></i></button>
-  </header>
+  <!-- Bootstrap Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
+    <a href="index.html" class="navbar-brand">hehetudio</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto"> 
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   
   <section id="video-section">
     <video autoplay muted loop id="bg-video">
@@ -33,6 +47,10 @@
   <footer>
     <p>&copy; 2023 hehe Studio</p>
   </footer>
+  <!-- Bootstrap JavaScript & fontaweasome & mi script local -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
   <script src="https://kit.fontawesome.com/6bddb0cd07.js" crossorigin="anonymous"></script>
 </body>
