--- a/index.html
+++ b/index.html
@@ -13,23 +13,20 @@
   
   <!-- Bootstrap Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
-    <a href="index.html" class="navbar-brand">hehetudio</a>
+    <a class="navbar-brand" href="#">ruralrecords</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto"> 
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Novedades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">Tienda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contacto.html">Contacto</a>
         </li>
       </ul>
     </div>
@@ -40,16 +37,31 @@
       <source src="images/coverr-hands-opening-a-record-player-6754-1080p.mp4" type="video/mp4">
     </video>
     <div class="video-text">
-      <h2>Creative Design Solutions</h2>
-      <p>Bringing your ideas to life with personalized, creative designs.</p>
+      <h2>redescubre la musica <span class="hover-text">tu tienda fav</span></h2>
+      <p></p>
     </div>
   </section>
+
   <footer>
-    <p>&copy; 2023 hehe Studio</p>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="novedades.html">Novedades</a>
+      <a href="tienda.html">Tienda</a>
+      <a href="contacto.html">Contacto</a>
+    </div>
+    <div class="footer-social">
+      Follow us on social media: 
+      <a href="https://twitter.com/ruralrecords" target="_blank">@ruralrecords</a>
+    </div>
+    <div class="footer-location">
+      Located in Madrid: C. de López de Hoyos, 28043
+    </div>
+    <p>&copy; 2024 ruralrecords</p>
   </footer>
+
   <!-- Bootstrap JavaScript & fontaweasome & mi script local -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
   <script src="https://kit.fontawesome.com/6bddb0cd07.js" crossorigin="anonymous"></script>
