tienda y contacto acabados
falta mediaquery y no se ve el fondo???

--- a/contacto.html
+++ b/contacto.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto"> 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Novedades</a>
+                    <a class="nav-link" href="novedades.html">Novedades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda</a>
+                    <a class="nav-link" href="tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -64,11 +64,11 @@
             <a href="contacto.html">Contacto</a>
         </div>
         <div class="footer-social">
-            Follow us on social media: 
+            Síguenos en redes sociales: 
             <a href="https://twitter.com/ruralrecords" target="_blank">@ruralrecords</a>
         </div>
         <div class="footer-location">
-            Located in Madrid: C. de López de Hoyos, 28043
+            C. de López de Hoyos, 28043, Madrid
         </div>
         <p>&copy; 2024 ruralrecords</p>
     </footer>
