--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto"> 
         <li class="nav-item">
-          <a class="nav-link" href="#">Novedades</a>
+          <a class="nav-link" href="novedades.html">Novedades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Tienda</a>
+          <a class="nav-link" href="tienda.html">Tienda</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contacto.html">Contacto</a>
@@ -37,7 +37,7 @@
       <source src="images/coverr-hands-opening-a-record-player-6754-1080p.mp4" type="video/mp4">
     </video>
     <div class="video-text">
-      <h2>redescubre la musica <span class="hover-text">tu tienda fav</span></h2>
+      <h2>redescubre la musica <span class="hover-text">en tu tienda fav!<3 </span></h2>
       <p></p>
     </div>
   </section>
@@ -50,11 +50,11 @@
       <a href="contacto.html">Contacto</a>
     </div>
     <div class="footer-social">
-      Follow us on social media: 
+      Siguenos en redes sociales:
       <a href="https://twitter.com/ruralrecords" target="_blank">@ruralrecords</a>
     </div>
     <div class="footer-location">
-      Located in Madrid: C. de López de Hoyos, 28043
+      C. de López de Hoyos, 28043, Madrid
     </div>
     <p>&copy; 2024 ruralrecords</p>
   </footer>
